fix visibility header buttons

--- a/src/blocks/header/__account-button/header__account-button.css
+++ b/src/blocks/header/__account-button/header__account-button.css
@@ -8,3 +8,9 @@
     padding: 3px;
     box-shadow: 0px 3px 14px 0px #00000014;
 }
+
+@media screen and (max-width:768px) {
+    .header__account-button {
+        visibility: hidden;
+    }
+}
