--- a/src/blocks/header/__menu-button/header__menu-button.css
+++ b/src/blocks/header/__menu-button/header__menu-button.css
@@ -1,11 +1,11 @@
 .header__menu-button{
-    display: flex;
+    display: none;
     flex-direction: column;
     margin: 7px;
 }
 
-@media screen and (min-width:769px) {
+@media screen and (max-width:768px) {
     .header__menu-button {
-        display: none;
+        display: flex;
     }
 }
