--- a/src/blocks/navigation/navigation.css
+++ b/src/blocks/navigation/navigation.css
@@ -11,6 +11,6 @@
 
 @media screen and (max-width:768px) {
     .navigation {
-        display: none;
+        visibility: hidden;
     }
 }
