--- a/src/blocks/promo/__logo/promo__logo.css
+++ b/src/blocks/promo/__logo/promo__logo.css
@@ -1,10 +1,14 @@
 .promo__logo{
     max-width: 310px;
 }
+@media screen and (max-width:768px) {
+    .promo__logo {
+        align-self: center;
+    }
+}
 
 @media screen and (max-width:320px) {
     .promo__logo {
         max-width: 210px;
-        align-self: center;
     }
 }
